added settings and task detail page and have the username that user input to show on the home page. Update readme to include change log for today

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="add_task">Add Task</string>
     <string name="my_tasks">My Tasks</string>
     <string name="submitted_message">Submitted!</string>
+    <string name="task_description">Spanker shrouds belaying pin long boat Pieces of Eight ye gabion galleon capstan reef. Cable nipper sheet grog walk the plank jib yardarm parrel Jack Ketch heave to. Quarter measured fer yer chains gunwalls Davy Jones Locker nipper sloop Jack Tar keelhaul chantey lookout.\nMutiny aye Sail ho bilged on her anchor haul wind Nelsons folly Sink me cog jack jib. Gangplank pinnace swab barkadeer Davy Jones Locker sloop gibbet matey Pieces of Eight schooner. Strike colors hogshead swab Chain Shot Admiral of the Black Pirate Round long clothes gabion squiffy case shot.Bilge water gun loaded to the gunwalls plunder lanyard chandler wench pirate jury mast no prey, no pay. Run a rig cog salmagundi warp driver Corsair spike grapple American Main Chain Shot. Hail-shot Corsair rum jury mast fore ballast deadlights blow the man down fire ship brigantine.</string>
 </resources>
