--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Taskmaster</string>
-    <string name="all_tasks">All Tasks</string>
+    <string name="add_team">Add Team</string>
     <string name="add_task">Add Task</string>
     <string name="my_tasks">My Tasks</string>
     <string name="submitted_message">Submitted!</string>
